2008/07/08
	42. Graphic roadmap is no longer displayed on overlay but inserted
	    in the Main 3D scene.
kppInterface 1.3 released May 13, 2008

	41. Store weak pointer to main window controller when method 
	    getMenuUICommandLists() is called.
	    This pointer replaces calls to deprecated 
	    CkppMainWindowController::getInstance().
	    As a consequence, when redefining method getMenuUICommandLists() 
	    in a class deriving from CkppInterface, function 
	    CkppInterface::getMainWindowController() should be called.
	40. Made attribute attHppPlanner private with protected access methods
	39. Replaced shared pointer to CkwsRoadmapBuilder by weak pointer in 
	    class CkwsGraphicRoadmapDelegate. 
	    Shared pointer loops imply that some objects are never deleted. 
	    However, a memory leak is remaining. Currently, CkwsGraphicRoadmapDelegate
	    objects are not deleted.
	38. Changed the way graphic roadmaps are handled :
	    creation of graphic roadmap is triggered from ChppPlanner through a notification.
	    CkppInterface subscribes to the notification and builds a graphic roadmap.
	37. Renamed some attributes and method parameter in order to homogeneize the style.
	36. Set default penetration to 0.02. Can be changed by compilation 
	    macro. 
	35. Correction of a bug in planner panel: if no roadmap builder 
	    was selected, and delegate was selected, kpp crashed.
	34. Defined enum in class CkppPlannerPanel in order to deal 
	    with arrays (roadmapbuilders, shooters, ...);
	33. If CXXFLAGS and CFLAGS are not defined at configuration, they are set to "-Wall".
	32. Adaptation to KPP version 2.04.500.
        31. Simplify CkppInterface::hppSetObstacleList
	
kppInterface 1.2 released February 19, 2008

	30. Avoid duplication of devices when adding a problem.
	29. Added LT roadmap builder and SLERP steering method
	    (undocumented kineoworks class) in the panel. 
	28. Adding documentation for using the panel in kppInterface.