@@ -1,3 +1,5 @@
+2008/07/09
+	43. Added the openfile command files.
 2008/07/08
 	42. Graphic roadmap is no longer displayed on overlay but inserted
 	    in the Main 3D scene.
